--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Teman_Sebangku App</string>
+    <string name="app_name">Teman Sebangku Kopi</string>
     <string name="title_activity_tab_dashboard">activity_tab_dashboard</string>
     <string name="mn_home">Home</string>
     <string name="mn_menu">Menu</string>
